kubernetes/infrastructure/gateway-api/gateway.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: internal
  namespace: gateway-system
  labels:
    app.kubernetes.io/name: internal-gateway
spec:
  gatewayClassName: cilium
  infrastructure:
    annotations:
      lbipam.cilium.io/sharing-cross-namespace: gateway-system,forgejo
      lbipam.cilium.io/sharing-key: mbhome-apps-gateway
  addresses:
    - type: IPAddress
      value: "10.20.30.200"
  listeners:
    - name: http
      hostname: "*.apps.mbhome.biz"
      port: 80
      protocol: HTTP
      allowedRoutes:
        namespaces:
          from: All
    - name: https
      hostname: "*.apps.mbhome.biz"
      port: 443
      protocol: HTTPS
      tls:
        mode: Terminate
        certificateRefs:
          - name: apps-mbhome-biz-tls
      allowedRoutes:
        namespaces:
          from: All
